syntax = "proto3";

import "socialnetwork/proto/post.proto";

option go_package = "sigmaos/socialnetwork/proto";

service TimelineService {
	rpc WriteTimeline(WriteTimelineRequest) returns (WriteTimelineResponse);
	rpc ReadTimeline(ReadTimelineRequest) returns (ReadTimelineResponse);
}

service HomeService {
	rpc WriteHomeTimeline(WriteHomeTimelineRequest) returns (WriteTimelineResponse);
	rpc ReadHomeTimeline(ReadTimelineRequest) returns (ReadTimelineResponse);
}

message WriteTimelineRequest {
	TimelineItem timelineitem = 1;
}

message WriteHomeTimelineRequest {
	TimelineItem   timelineitem = 1;
	repeated int64 usermentionids = 2;
}

message WriteTimelineResponse {
	string ok = 1;
}

message ReadTimelineRequest {
	int64 userid = 1;
	int32 start = 2;
	int32 stop = 3;
}

message ReadTimelineResponse {
	string   ok = 1;
	repeated Post posts = 2;
}

message Timeline {
	int64 userid = 1;
	repeated int64 postids = 2;
	repeated int64 timestamps = 3;
}

message TimelineItem {
	int64 userid = 1;
	int64 postid = 2;
	int64 timestamp = 3; 
}
